<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/addTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/add_teacher"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/viewTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/view_teacher"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/addStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/add_student"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/viewStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/view_student"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/addSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/add_subject"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>