<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/faculty_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/create_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/txtDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Department"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/arrow_r_gray"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />
 <!--       <Spinner
            android:id="@+id/spinnerDept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_marginTop="10dp"
            android:entries="@array/department" />-->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/txtYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Year"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/arrow_r_gray"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />
       <!-- <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            android:entries="@array/year" />
-->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/semester"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/txtSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Semester"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/arrow_r_gray"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />
       <!-- <Spinner
            android:id="@+id/spinnerSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            android:entries="@array/semester" />
-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subject"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/txtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Subject"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/arrow_r_gray"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />
       <!-- <Spinner
            android:id="@+id/spinnerSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog" />-->

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>